--- a/package.json
+++ b/package.json
@@ -45,12 +45,13 @@
         "simple-datatables": "3.2.2",
         "vue": "^3.2.47",
         "vue-count-to": "1.0.13",
+        "vue-eslint-parser": "^9.0.3",
         "vue-flatpickr-component": "9.0.6",
+        "vue-gtag": "^2.0.1",
         "vue-round-slider": "1.0.1",
         "vue-router": "^4.1.6",
         "vue-star-rating": "2.1.0",
         "vue-sweetalert2": "5.0.5",
-        "vue-eslint-parser": "^9.0.3",
         "vue-tilt.js": "1.1.1",
         "vuex": "4.0.2"
     }
