--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "vue-eslint-parser": "^9.0.3",
         "vue-flatpickr-component": "9.0.6",
         "vue-gtag": "^2.0.1",
+        "vue-page-title": "^2.2.0",
         "vue-round-slider": "1.0.1",
         "vue-router": "^4.1.6",
         "vue-star-rating": "2.1.0",
