--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@fullcalendar/daygrid": "^6.1.4",
         "@fullcalendar/interaction": "^6.1.4",
         "@fullcalendar/vue3": "^6.1.4",
+        "@onesignal/onesignal-vue3": "^1.0.2",
         "bootstrap": "5.2.0",
         "chart.js": "3.8.2",
         "choices.js": "10.1.0",
