--- a/package.json
+++ b/package.json
@@ -37,13 +37,16 @@
         "choices.js": "10.1.0",
         "core-js": "3.24.0",
         "countup.js": "2.3.2",
+        "datatables.net-bs5": "^1.13.2",
+        "datatables.net-select": "^1.6.0",
+        "datatables.net-vue3": "^2.0.0",
         "dragula": "3.7.3",
         "dropzone": "6.0.0-beta.2",
         "jkanban": "1.3.1",
         "leaflet": "1.8.0",
         "photoswipe": "4.1.3",
         "quill": "1.3.7",
-        "simple-datatables": "3.2.2",
+        "simple-datatables": "5.0.3",
         "vue": "^3.2.47",
         "vue-count-to": "1.0.13",
         "vue-eslint-parser": "^9.0.3",
