--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "chart.js": "3.8.2",
         "choices.js": "10.1.0",
         "core-js": "3.24.0",
+        "country-state-city": "^3.1.2",
         "countup.js": "2.3.2",
         "datatables.net-bs5": "^1.13.2",
         "datatables.net-select": "^1.6.0",
