--- a/.github/workflows/telegram.yml
+++ b/.github/workflows/telegram.yml
@@ -6,7 +6,7 @@ on:
 jobs:
 
   build:
-    name: Build
+    name: Send message
     runs-on: ubuntu-latest
     steps:
       - name: send telegram message on push
@@ -15,9 +15,7 @@ jobs:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
           message: |
+            [Github]
             ${{ github.actor }} created commit:
             Commit message: ${{ github.event.commits[0].message }}
-            
             Repository: ${{ github.repository }}
-            
-            See changes: https://github.com/${{ github.repository }}/commit/${{github.sha}}
