--- a/.github/workflows/telegram.yml
+++ b/.github/workflows/telegram.yml
@@ -15,7 +15,10 @@ jobs:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
           message: |
-            [Github]
-            ${{ github.actor }} created commit:
-            Commit message: ${{ github.event.commits[0].message }}
-            Repository: ${{ github.repository }}
+            [Let Learn]
+            
+            ✔️ ${{ github.actor }} vừa mới commit!
+            
+            📣 Nội dung: ${{ github.event.commits[0].message }}
+            
+            📂 Repository: ${{ github.repository }}
