--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "core-js": "3.24.0",
         "country-state-city": "^3.1.2",
         "countup.js": "2.3.2",
+        "crypto-js": "^4.1.1",
         "datatables.net-bs5": "^1.13.2",
         "datatables.net-select": "^1.6.0",
         "datatables.net-vue3": "^2.0.0",
