--- a/.github/workflows/telegram.yml
+++ b/.github/workflows/telegram.yml
@@ -9,16 +9,29 @@ jobs:
     name: Send message
     runs-on: ubuntu-latest
     steps:
-      - name: send telegram message on push
+      - name: send telegram message to ponta notification
         uses: appleboy/telegram-action@master
         with:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
           message: |
             [Let Learn]
-            
+
             ✔️ ${{ github.actor }} vừa mới commit!
-            
+
             📣 Nội dung: ${{ github.event.commits[0].message }}
-            
+
+            📂 Repository: ${{ github.repository }}
+      - name: send telegram message on push
+        uses: appleboy/telegram-action@master
+        with:
+          to: -1001831808740
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          message: |
+            [Let Learn]
+
+            ✔️ ${{ github.actor }} vừa mới commit!
+
+            📣 Nội dung: ${{ github.event.commits[0].message }}
+
             📂 Repository: ${{ github.repository }}
