--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@ckeditor/ckeditor5-vue": "^4.0.1",
         "@onesignal/onesignal-vue3": "^1.0.2",
         "@popperjs/core": "^2.11.7",
+        "body-parser": "^1.20.2",
         "bootstrap": "^5.2.3",
         "chart.js": "^4.2.1",
         "choices.js": "^10.2.0",
