--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "bootstrap": "^5.2.3",
         "chart.js": "^4.2.1",
         "choices.js": "^10.2.0",
+        "file-saver": "^2.0.5",
         "jspdf": "^2.5.1",
         "md5-js-tools": "^1.0.2",
         "papaparse": "^5.4.1",
