--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "vue-page-title": "^2.2.0",
         "vue-router": "^4.1.6",
         "vue-tilt.js": "^1.1.1",
-        "vuex": "^4.1.0"
+        "vuex": "^4.1.0",
+        "write-excel-file": "^1.4.25"
     }
 }
